Bug 688396 - pdf file causes 1.9 gig allocation in --stroke--
Summary: pdf file causes 1.9 gig allocation in --stroke--
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Interpreter (show other bugs)
Version: master
Hardware: All All
: P1 normal
Assignee: leonardo
URL:
Keywords:
: 688383 688444 688680 688826 688885 689033 (view as bug list)
Depends on:
Blocks:
 
Reported: 2005-11-23 08:32 UTC by Stefan Kemper
Modified: 2008-12-19 08:31 UTC (History)
6 users (show)

See Also:
Customer: 330
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Kemper 2005-11-23 08:32:06 UTC
-r180 works -r360 fails 
could be pdfinterpreter or gslibrary error?



(gdb) run -I/Users/stefan/projects/caspernew/gs/lib -r360 -sDEVICE=tiff32nc
-sOutputFile=/Users/stefan/big-tifflzw.tif ~/test/ergosoft/RENT_Indfaldsvej.pdf 
Starting program: /Users/stefan/projects/caspernew/gs/debugobj/gs
-I/Users/stefan/projects/caspernew/gs/lib -r360 -sDEVICE=tiff32nc
-sOutputFile=/Users/stefan/big-tifflzw.tif ~/test/ergosoft/RENT_Indfaldsvej.pdf

AFPL Ghostscript CVS PRE-RELEASE 8.54 (2005-10-20)

Copyright (C) 2005 artofcode LLC, Benicia, CA.  All rights reserved.


This software comes with NO WARRANTY: see the file PUBLIC for details.

Processing pages 1 through 1.

Page 1

[a+]gs_malloc(large object chunk)(1979888692) = 0x0: exceeded limit

[a+]gs_malloc(large object chunk)(1979888692) = 0x0: exceeded limit

Error: /VMerror in --stroke--
Comment 1 Stefan Kemper 2005-11-23 08:33:31 UTC
Created attachment 1798 [details]
rent-indfaldsvej.pdf
Comment 2 Ray Johnston 2006-03-21 22:00:05 UTC
This is confirmed to be in the 'pattern_accum_open' when it is trying to
open a 32-bit deep memory device that is width=17291 height=28630.

This corresponds to a pattern that is 48.03 inches by 79.53 inches
(which is the entire page).

This is another example of needing to handle 'worst case' patterns
in some other way, either by creating a 'clist' representation of
the graphics, or by executing the Pattern Proc repeatedly as needed
to cover the path to be filled or stroked.
Comment 3 Ray Johnston 2006-03-21 22:02:02 UTC
*** Bug 688444 has been marked as a duplicate of this bug. ***
Comment 4 Ralph Giles 2006-05-03 10:02:50 UTC
*** Bug 688680 has been marked as a duplicate of this bug. ***
Comment 5 Ralph Giles 2006-06-28 10:18:58 UTC
*** Bug 688774 has been marked as a duplicate of this bug. ***
Comment 6 Marcos H. Woehrmann 2006-09-13 10:03:50 UTC
*** Bug 688885 has been marked as a duplicate of this bug. ***
Comment 7 Marcos H. Woehrmann 2007-01-03 10:19:08 UTC
*** Bug 689033 has been marked as a duplicate of this bug. ***
Comment 8 Ray Johnston 2007-04-07 15:26:06 UTC
*** Bug 688383 has been marked as a duplicate of this bug. ***
Comment 9 Ray Johnston 2007-04-12 12:29:50 UTC
*** Bug 688826 has been marked as a duplicate of this bug. ***
Comment 10 leonardo 2007-04-17 07:38:11 UTC
The revision 7861 processes test cases with no error.

Here is the list of related patches :
rev 7815, 7816, 7828, 7837, 7839, 7840, 7853, 7855, 7856, 7857, 7859, 7860, 
7861.

Rather it closes the bug, we recommend for the customer to wait for the next 
stable release.
Comment 11 Marcos H. Woehrmann 2007-04-17 16:31:16 UTC
I've verified that the current head process the attached file and all the files
associated with the duplicate bugs without consuming large amounts of memory.
Comment 12 Marcos H. Woehrmann 2007-04-17 21:10:00 UTC
A slight correction to comment 11: The file "page 4 of the trouble ps." (sic)
from bug 688774 produces a seg fault at 200 DPI and higher.  However,
ghostscript does not appear to consume a large amount of memory before crashing,
so it's likely an unrelated problem.
Comment 13 leonardo 2007-04-18 00:40:06 UTC
Regarding to Comment #12 :
What revision do you use ?
Please try 7863.
It closes another bug, which may be relevant to your crash.
If 7863 crashes, please open a separate bug report with proper information how 
to reproduce the crash.

Igor.
Comment 14 Marcos H. Woehrmann 2007-04-18 09:00:19 UTC
Leonardo,

Comment #5 for bug 688774, which I've reopened, contains the information you requested in Comment 
#13.

marcos